# ApplicationX

./: .gitignore  README.md  reorganize_java.sh  reorganize_java_multimodule.sh
benchmarks/: parse_results.py  run_all.sh
cpp/: CMakeLists.txt
cpp/include/quickfiximpl/: QuickFixApplication.h  QuickFixClient.h
cpp/include/ringbuffer/: RingBuffer.h
cpp/include/yaml_loader/: YamlLoader.h
cpp/plugins/fixdictionarygenerator/: CMakeLists.txt
cpp/plugins/fixdictionarygenerator/include/: FixDictionaryGenerator.h
cpp/plugins/fixdictionarygenerator/src/: FixDictionaryGenerator.cpp  main.cpp
cpp/plugins/fixdictionarygenerator/test/: FixDictionaryGeneratorTest.cpp
cpp/plugins/quickfiximpl/: CMakeLists.txt  main.cpp
cpp/plugins/ringbuffer/: CMakeLists.txt  RingBuffer.cpp
cpp/plugins/solaceMessageProcessor/: CMakeLists.txt  Consumer.cpp  Producer.cpp  README.md  TradeMessageBuilder.cpp  main.cpp
cpp/plugins/yaml_loader/: CMakeLists.txt  YamlLoader.cpp  main.cpp
cpp/src/quickfiximpl/: QuickFixApplication.cpp  QuickFixClient.cpp
cpp/src/ringbuffer/: main.cpp
developers-utils/: .devcontainer.json  Dockerfile  run.bat  run.sh
fixProcessor/proto/: Trade.proto
infra/: run.sh  run_benchmark_in_container.sh
infra/docker/: Dockerfile.all  Dockerfile.cpp  Dockerfile.java  Dockerfile.python
java/: DOCKER_README.md  README.md  build.gradle  settings.gradle
java/plugins/fixdictionarygenerator/: build.gradle
java/plugins/fixdictionarygenerator/src/main/java/com/applicationsx/fixdictionarygenerator/: FixDictionaryGenerator.java
java/plugins/fixdictionarygenerator/src/main/resources/: fix44_sample.xml
java/plugins/fixdictionarygenerator/src/test/java/com/applicationsx/fixdictionarygenerator/: FixDictionaryGeneratorTest.java
java/plugins/protobuf/: build.gradle
java/plugins/protobuf/src/main/java/com/applicationsx/protobuf/: Main.java  Order.java  OrderConverter.java
java/plugins/protobuf/src/main/proto/: order.proto
java/plugins/quickfiximpl/: build.gradle
java/plugins/quickfiximpl/src/main/java/com/applicationsx/quickfiximpl/: QuickFixClient.java  QuickFixDemo.java  QuickFixServer.java
java/plugins/quickfiximpl/src/main/resources/: quickfix_client.cfg  quickfix_server.cfg
java/plugins/ringbuffer/: build.gradle
java/plugins/solaceMessageProcessor/: README.md  build.gradle
java/plugins/yamlloader/: build.gradle
python/: pyproject.toml  requirements.txt
python/plugins/fixdictionarygenerator/: README.md  fix44_sample.xml  fixdictionarygenerator.py  test_fixdictionarygenerator.py
python/plugins/fleetManagment/frontend/html/templates/: base.html  drivers.html
python/plugins/fleetManagment/frontend/html/templates/components/: chat_widget.html
python/plugins/ringbuffer/: ringbuffer_app.py
python/plugins/solaceMessageProcessor/: README.md  Trade_pb2.py  consumer.py  main.py  message_builder.py  message_handler.py  producer.py  solace_config.py
python/plugins/transPort/: README.md  README_DEPLOYMENT.md  app.py  deploy.bat  deploy.py  models.py  requirements.txt  setup_heroku.bat  setup_heroku.ps1
python/plugins/transPort/static/css/: style.css
python/plugins/transPort/templates/: agent_form.html  agents.html  base.html  billing.html  billing_form.html  dashboard.html  discount_form.html  discounts.html  driver_form.html  drivers.html  job_form.html  jobs.html  login.html  reset_password.html  service_form.html  services.html  smart_add.html  vehicle_form.html  vehicles.html
python/plugins/yaml_loader/: yaml_loader.py
shared_configs/: orders.json  sample.yaml
(+16 files in other folders)
